# dentist-office-management

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entry.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
dentman/: asgi.py  middleware.py  storage.py  urls.py  utils.py  views.py  wsgi.py
dentman/app/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
dentman/app/migrations/: 0001_initial.py  0002_user_additional_info_user_is_dev_user_is_patient_and_more.py  0003_alter_user_additional_info_alter_user_is_dev_and_more.py  0004_attachment_attachmententity.py  0005_metrics.py  0006_user_is_dentist.py  0007_user_eid_alter_attachment_file_and_more.py  0008_alter_attachment_file_alter_user_profile_photo.py  0009_alter_attachment_file.py  0010_alter_user_profile_photo.py  0011_alter_user_profile_photo.py  0012_alter_user_profile_photo.py  0013_attachment_created_at_attachment_created_by_and_more.py  0014_alter_user_phone_number.py  0015_alter_attachment_file.py  0016_user_birth_date.py  0017_user_is_adult.py  0018_remove_user_is_dentist_user_is_dentist_assistant_and_more.py  0019_user_is_dentist.py
dentman/app/tests/: test_metrics.py  test_user.py
dentman/man/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
dentman/man/migrations/: 0001_initial.py  (+6 more)
dentman/ops/: admin.py  apps.py  forms.py  models.py  signals.py
dentman/settings/: __init__.py  dev.py
etc/: .gitignore  pypoetry-config.toml  supervisord.conf.++
templates/admin/: base.html
(+45 files in other folders)
